--- a/style/estilo.css
+++ b/style/estilo.css
@@ -1,5 +1,6 @@
+
 body{
-    background-color:rgb(34, 34, 34);;
+    background-color:rgb(34, 34, 34);
     color: white;
     max-width: 1200px;
     margin: 0 auto;
