--- a/style/estilo.css
+++ b/style/estilo.css
@@ -1,9 +1,19 @@
-body{
+ .home {
     background-color:rgb(34, 34, 34);
     color: white;
     max-width: 1200px;
     margin: 0 auto;
     padding: 15px;
+
+}
+
+.rese {
+    background-color:rgb(34, 34, 34);
+    color: white;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 15px;
+
 
 }
 
